# bootfrost

./: .gitignore  Cargo.toml  log.pcsf  readme_rus.md  tests.pcf
problems/: 1run.bat  BlockBranchTest.pcsf  BlockMovePlanning.json  BlockMovePlanning.log.pcsf  BlockMovePlanning.pcsf  BlockMovePlanning.pcsf.log.pcsf  BlockMovePlanningSimple.pcsf  floats.pcf  log.pcsf  solverlog.json
src/: answer.rs  base.rs  main.rs  misc.rs  question.rs  solver.rs  solverlog.rs  term.rs
src/parser/: parser.rs  pcf.lalrpop  tqfline.lalrpop
src/strategies/: attributes.rs  environment.rs  ifunctions.rs  mod.rs  rhai_runtime.rs  strategies.rs
tests/: astar_integration.rs  rhai_runtime_integration.rs  solve1.rs
tests/scripts/: astar.rhai  manhattan.rhai
tools/block_move_viewer/: README.md  __main__.py  requirements.txt  viewer.py
