[package]
name = "bootfrost"
version = "0.1.0"
edition = "2021"
build = "src/build.rs" # LALRPOP preprocessing

[build-dependencies]
lalrpop = "0.19.7"


[dependencies]
#lalrpop-util = "0.19.7"
#https://github.com/lalrpop/lalrpop/issues/650
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
clap = { version = "3.1.12", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Rhai: embedded scripting engine used to register user-defined
# functions that can be invoked from Bootfrost formulas. Pulled in with
# default features for now; can be trimmed later if binary size matters.
# `internals` is required to access the `Variant` trait, which is the
# canonical way to do typed downcasts of `Dynamic` values.
rhai = { version = "1.25", features = ["sync", "internals"] }
#bootfrost_derive = {path = "bootfrost_derive"}